k8s/rails-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
        - name: rails-app
          image: sarumathy/ruby_app:2
          ports:
            - containerPort: 3000
