k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  spec:
    selector:
      app: postgres
    type: LoadBalancer
    ports:
      - port: 5432
        targetPort: 5432
