k8s/rails-app-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: rails-app
  ports:
    - port: 3000
      targetPort: 3000
