k8s/rails-app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-nodeport
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31515
  selector:
    app: rails-app
